# MolSim

./: CMakeLists.txt  Doxyfile  README.md  generate_input.py  input_assignment_2.json  run_multiple_inputs.py
.github/workflows/: cmake.yml
cmake/modules/: doxygen.cmake
doc_pages/: README_1.md  README_2.md  README_3.md  README_4.md  README_5.md  REAME_3.md
doc_pages/doxygen/: benchmarks.md
input/: assignment_5_script.R  generate_input.py  generate_json.py
input/files/: collision_of_two_bodies.xml  input_assignment_2.json  input_assignment_3.xml  spheres_assignment_2.json  test.xml
input/files/assignment_3/: collision_of_two_bodies.xml  input_assignment_3.xml  test.xml
input/files/assignment_4/: big_benchmark_test.xml  input_week4_task2_big.xml  input_week4_task3_1.xml  input_week4_task3_2.xml  xml_parser_test_input.xml
input/files/assignment_5/: heart.xml  membrane_vs_sphere.xml  special_particles_test.xml  stairs.xml  task1.xml  task3.xml  task4.xml  task5.xml  task5_cooling.xml  task5_fluid.xml  task5_supercooling.xml
input/files/assignment_5/contest/: task3_first_1000.xml  week4_task2_first_1000.xml
input/files/assignment_5/csv/: diffusion_task5_cooling_statistics.csv  statistics_task4.csv
input/files/assignment_5/task1_benchmarks/: task1_primitiveX.xml  task1_primitiveY.xml  task1_primitiveZ.xml  task1_serial.xml  task1_subDomain.xml
input/files/assignment_5/task4_experiments/: task4_assignment.xml  task4_fixed_spheres.xml  task4_higher_gravity.xml  task4_walls_equal_fluid.xml
input/files/testing/: immovable_particles_test.xml  special_particle_test.xml  statistics_test.xml
input/files/week4/: input_week4_task3_1.xml  input_week4_task3_2.xml
media/doxygen/: awesome-doxygen-sidebar.css  awesome-doxygen.css
src/: DirectSumParticleContainer.cpp  DirectSumParticleContainer.h  FileReader.cpp  FileReader.h  IOWriter.h  LinkedCellContainer.cpp  LinkedCellContainer.h  Main.cpp  MolSim.cpp  Particle.cpp  Particle.h  ParticleContainer.cpp  ParticleContainer.h  PhysicsCalc.h  StoermerVerlet.cpp  StoermerVerlet.h
src/inputReader/: CheckpointReader.cpp  CheckpointReader.h  FileReader.cpp  FileReader.h  XMLReader.cpp  XMLReader.h  simulation.cpp  simulation.h  simulation.xsd
src/outputWriter/: CheckpointWriter.cpp  CheckpointWriter.h  IOWriter.h  VTKWriter.cpp  VTKWriter.h  XYZWriter.cpp  XYZWriter.h  vtk-unstructured.cpp  vtk-unstructured.h
src/particleContainers/: Cell.cpp  Cell.h  DirectSumParticleContainer.cpp  DirectSumParticleContainer.h  DirectSumParticleIterator.h  LinkedCellContainer.cpp  LinkedCellContainer.h  LinkedCellParticleIterator.h  PairIterator.h  ParticleContainer.cpp  ParticleContainer.h  ParticleIterator.h
src/physicsCalculator/: Gravitation.cpp  Gravitation.h  LennardJones.cpp  LennardJones.h  LinkedCell.cpp  LinkedCell.h  PhysicsCalc.cpp  PhysicsCalc.h  StoermerVerlet.cpp  StoermerVerlet.h  Thermostat.cpp  Thermostat.h
src/statistics/: DensityVelocityProfile.cpp  DensityVelocityProfile.h  StatisticsLogger.h  Thermodynamical.cpp  Thermodynamical.h
src/utils/: ArrayUtils.h  Config.h  MainUtils.cpp  MainUtils.h  MaxwellBoltzmannDistribution.cpp  MaxwellBoltzmannDistribution.h  ParticleGenerator.cpp  ParticleGenerator.h
statistics/: RDF_task5_cooling_statistics.csv  RDF_task5_supercooling_statistics.csv  diffusion_task5_supercooling_statistics.csv
test/: CMakeLists.txt  ImmovableParticlesTest.cpp  LennardJonesTest.cpp  LinkedCellContainerTest.cpp  LinkedCellTest.cpp  MainTest.cpp  ParticleContainerTest.cpp  ParticleTest.cpp  SpecialParticleTest.cpp  StatisticsTest.cpp  ThermostatTest.cpp  XMLReaderTest.cpp  generate_json.py  sample.json
